batch_scripts/HNL-Sensitivity-batch/LSFJOB_559971960/STDOUT
@(#)CERN job starter $Date: 2010/06/23 14:22:16 $
Working directory is </pool/lsf/egraveri/559971960> on <>

  File "/afs/cern.ch/work/e/egraveri/public/SHiP/HNL-Sensitivity-batch/sandbox/scan.py", line 1
    1;2802;0cfrom __future__ import division
                ^
SyntaxError: invalid syntax

Job finished at sab 30 ago 2014, 11.10.58, CEST on node 
 under linux version Scientific Linux CERN SLC release 6.5 (Carbon)

CERN statistics: This process used approximately : 0:00:04 KSI2K hours (4 KSI2K seconds)
                 This process corresponds to     : 0:00:17 HS06  hours (17 HS06  seconds)
